--- a/public/css/app-rtl.css
+++ b/public/css/app-rtl.css
@@ -1388,6 +1388,11 @@ app-root {
   color: #007bff;
 }
 
+#quoteResults .card-header {
+  border-bottom: none;
+  border-radius: 8px;
+}
+
 #quoteResults .list-group-item {
   padding: 0.5rem 1rem;
 }
@@ -1412,6 +1417,19 @@ app-root {
   padding-right: 8px;
   margin-top: -5px;
   font-size: 0.9rem;
+}
+
+.row.quote-item {
+  background: #fafafa;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer-fixed .app-footer {
